Ajout du genre sur la page de recherche du vehicule pour les menus controle et délivrance

--- a/app/Resources/views/visite/controles.html.twig
+++ b/app/Resources/views/visite/controles.html.twig
@@ -40,6 +40,7 @@
                         <th>Immatriculation</th>
                         <th>Chassis</th>
                         <th>Type Chassis</th>
+                        <th>Genre</th>
                         <th>Proprietaire</th>
                         <th>TYPE</th>
                         <th>ETAT</th>
@@ -53,6 +54,7 @@
                             <td>{{ visite.immatriculation }} </td>
                             <td>{{ visite.chassis }} </td>
                             <td>{{ visite.type_chassis }} </td>
+                            <td>{{ visite.genre }} </td>
                             <td>{{ visite.nom }} {{ visite.prenom }}</td>
                             <td>
                                 {% if visite.contre_visite == 1 %}
