Ajout du genre sur la page de recherche du vehicule pour les menus controle et délivrance : Ajustement du footer

--- a/app/Resources/views/visite/delivrance.html.twig
+++ b/app/Resources/views/visite/delivrance.html.twig
@@ -97,6 +97,7 @@
                     <tr>
                         <th>Immatriculation</th>
                         <th>Type Chassis</th>
+                        <th>Genre</th>
                         <th>Proprietaire</th>
                         <th>TYPE</th>
                         <th>ETAT</th>
