--- a/app/Resources/views/visite/controles.html.twig
+++ b/app/Resources/views/visite/controles.html.twig
@@ -100,6 +100,7 @@
                         <th>Immatriculation</th>
                         <th>Chassis</th>
                         <th>Type Chassis</th>
+                        <th>Genre</th>
                         <th>Proprietaire</th>
                         <th>TYPE</th>
                         <th>ETAT</th>
