--- a/app/Resources/views/centre/menu.html.twig
+++ b/app/Resources/views/centre/menu.html.twig
@@ -65,7 +65,7 @@
             </li>
             <li class="nav-item ">
                 <a class="nav-link {% block menu_recherche_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_statistique_visite_detail') }}">
-                    <i class="nav-icon icon-list"></i> Recherche</a>
+                    <i class="nav-icon icon-list"></i> Recherche avancée</a>
             </li>
             <li class="nav-item ">
                 <a class="nav-link {% block menu_detail_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_statistique_detail_index') }}">
