--- a/app/Resources/views/statistique/detail/visites.html.twig
+++ b/app/Resources/views/statistique/detail/visites.html.twig
@@ -30,6 +30,9 @@
                     <td>Controleur <input type="text" id="controleur" name="controleur" value="{{ controleur }}"/></td>
                 </tr>
                 <tr align="left">
+                    <td>Caissier <input type="text" id="caissier" name="caissier" value="{{ caissier }}"/></td>
+                </tr>
+                <tr align="left">
                     <td> Résultat 
                         <select id="type" name="type" >
                             <option value='0' {% if type == 0 %}selected{% endif %}>Tout</option>
