--- a/app/Resources/views/centre/menu.html.twig
+++ b/app/Resources/views/centre/menu.html.twig
@@ -25,7 +25,7 @@
     </li>
     <li class="nav-item nav-dropdown {% block menu_historiques_open %}{% endblock %}">
         <a class="nav-link nav-dropdown-toggle" href="#">
-            <i class="nav-icon fa fa-bar-chart"></i> Historiques</a>
+            <i class="nav-icon fa fa-bar-chart"></i> Historique</a>
             <ul class="nav-dropdown-items">
                 <li class="nav-item ">
                     <a class="nav-link {% block menu_historiquevehicule_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_historique_index') }}">
@@ -44,12 +44,12 @@
         <ul class="nav-dropdown-items">
             <li class="nav-item ">
                 <a class="nav-link {% block menu_quittance_actif %}{% endblock %}" href="{{ path('caisse_quittance_index') }}">
-                    <i class="nav-icon icon-list"></i> LISTE</a>
+                    <i class="nav-icon icon-list"></i> Quittances</a>
             </li>
             {% if is_granted('ROLE_SUPERVISEUR') %}
             <li class="nav-item ">
                 <a class="nav-link {% block menu_quittance_historique_actif %}{% endblock %}" href="{{ path('admin_gestion_quittance_historique') }}">
-                    <i class="nav-icon icon-list"></i> HISTORIQUE</a>
+                    <i class="nav-icon icon-list"></i> Historique</a>
             </li>
             {% endif %}
         </ul>
