--- a/app/Resources/views/proprietaire/edit_modal.html.twig
+++ b/app/Resources/views/proprietaire/edit_modal.html.twig
@@ -1,8 +1,9 @@
 
 
-<form name="appbundle_proprietaire" method="POST" action="{{ path('proprietaire_modal_edit', { 'id': proprietaire.id }) }}">
-        {{ form_widget(edit_form) }}
-        <input type="hidden" name="vehicule_id" value="{{ vehicule_id }}"/>
-        <input type="submit" value="Modifier" />
+<form id="appbundle_proprietaire" name="appbundle_proprietaire" method="POST" action="{{ path('proprietaire_modal_edit', { 'id': proprietaire.id }) }}">
+    <input type="submit" value="Enregistrer" /> <br/>   <br/>  
+    {{ form_widget(edit_form) }}
+    <input type="hidden" name="vehicule_id" value="{{ vehicule_id }}"/>
+    <input type="submit" value="Enregistrer" />
 </form>
 
